feat: Enhance ProjectBuilder functionality with freelancer assignment endpoints
- Added new routes for managing freelancers in ProjectBuilder, including adding, removing, and selecting freelancers.
- Updated ProjectBuilder type definitions to include interested and selected freelancers.
- Modified global mail service to use Gmail SMTP settings.
- Created comprehensive test scripts for ProjectBuilder freelancer assignment workflow and user registration.
- Implemented OTP generation and verification tests to ensure reliability of the OTP service.
- Cleaned up redundant code in the default router and ensured proper endpoint usage.

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "A freenlance plate form for freelancer just like fiverr",
   "main": "/src/server.ts",
-  "author": "zlaam",
+  "author": "Shubnit12",
   "license": "MIT",
   "scripts": {
     "lint": "eslint . && bun run type-check",
@@ -23,6 +23,8 @@
     "db:studio": "prisma studio",
     "db:push": "prisma db push",
     "test": "node",
+    "test:otp": "node test-otp.js",
+    "test:otp:integration": "node tests/otp/otp-integration.test.js",
     "prepare": "husky"
   },
   "dependencies": {
