Change DATABASE_URL for new database connection
Updated DATABASE_URL for database connection.

--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ ENV=DEVELOPMENT # change this environment to PRODUCTION while deploying
 PORT=8000
 JWT_SECRET="AdGdhclgLTexQ2hdpg0esP$$4fK!tcOF"
 # DATABASE_URL=postgresql://pls-user:090078601@69.48.206.67:5435/pls-db
-DATABASE_URL="postgresql://postgres:ypLrYUnrwcqkjQEoQwpKnKUNWFhPefMS@switchback.proxy.rlwy.net:55419/railway"
+DATABASE_URL="postgresql://postgres:wkbFdoMRyyhjenyFDYMlDwELvUazZrRt@turntable.proxy.rlwy.net:54254/railway"
 SMTP_HOST_EMAIL="primelogicsolution@gmail.com"
 SMTP_SECRET="ltcbmdewvxcctsii"
 CLOUDINARY_API_SECRET="6ge2UhCFfT9wsqtanq5PnTdZmrY"
