--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,15 +29,14 @@ jobs:
           script: |
             cd ${{ secrets.APP_PATH }}
 
-            echo "Pulling latest changes..."
-            git reset --hard
-            git pull origin main
+            echo "Adding Bun to PATH..."
+            export PATH="/home/primelogicsol/.bun/bin:$PATH"
 
             echo "Installing dependencies using Bun..."
-            /home/primelogicsol/.bun/bin/bun install
+            bun install
 
             echo "Building project with Bun..."
-            /home/primelogicsol/.bun/bin/bun run build
+            bun run build
 
             echo "Restarting PM2 service..."
             pm2 restart pls-backend-upgraded --update-env
