Remove unnecessary flag from PM2 restart command

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,6 +36,6 @@ jobs:
             bun install
             
             echo "Restarting PM2 service..."
-            pm2 restart pls-backend-upgraded --update-env
+            pm2 restart pls-backend-upgraded
 
             echo "✅ Deployment complete and changes reflected!"
