--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,6 +34,7 @@ jobs:
 
             echo "Installing dependencies using Bun..."
             bun install
+            bun run build
             
             echo "Restarting PM2 service..."
             pm2 restart pls-backend-upgraded
