--- a/src/swagger/freelancer.yaml
+++ b/src/swagger/freelancer.yaml
@@ -875,6 +875,161 @@ paths:
                     type: string
                     example: "Failed to fetch available projects"
 
+  /freelancer/projects/{projectId}:
+    get:
+      tags:
+        - Freelancer
+      summary: Get a single project by ID for bidding
+      description: |
+        Retrieve detailed information about a specific project for bidding purposes.
+
+        **Visibility Rules:** 
+        - **Assigned freelancers**: Can see their projects at all times (regardless of payment/bid status)
+        - **Non-assigned freelancers**: Can only see projects where:
+          - `paymentStatus = "SUCCEEDED"` **AND**
+          - `acceptingBids = true` (project is open for new bids)
+
+        **Additional Notes:**
+        - Project pricing/estimates are intentionally hidden from freelancers
+        - Client personal information is hidden (only business info is shown)
+        - Returns 404 if project doesn't exist or is not available for bidding
+      security:
+        - bearerAuth: []
+      parameters:
+        - name: projectId
+          in: path
+          required: true
+          description: UUID of the project to retrieve
+          schema:
+            type: string
+            format: uuid
+          example: "b4c9ca8b-01e4-4389-abce-d450dafa3ad8"
+      responses:
+        "200":
+          description: Project retrieved successfully
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  success:
+                    type: boolean
+                    example: true
+                  data:
+                    type: object
+                    properties:
+                      id:
+                        type: string
+                        format: uuid
+                        example: "b4c9ca8b-01e4-4389-abce-d450dafa3ad8"
+                      createdAt:
+                        type: string
+                        format: date-time
+                      updatedAt:
+                        type: string
+                        format: date-time
+                      paymentStatus:
+                        type: string
+                        enum: [PENDING, SUCCEEDED, FAILED]
+                        example: "SUCCEEDED"
+                      acceptingBids:
+                        type: boolean
+                        example: true
+                      discordChatUrl:
+                        type: string
+                        nullable: true
+                        example: "https://discord.gg/example"
+                      details:
+                        type: object
+                        description: Project details (client personal info is hidden)
+                        properties:
+                          companyName:
+                            type: string
+                            example: "Tech Innovations Inc"
+                          companyWebsite:
+                            type: string
+                            nullable: true
+                            example: "https://techinnovations.com"
+                          businessAddress:
+                            type: string
+                            nullable: true
+                            example: "123 Tech Street, San Francisco, CA"
+                          businessType:
+                            type: string
+                            example: "STARTUP"
+                          referralSource:
+                            type: string
+                            nullable: true
+                            example: "LinkedIn"
+                      services:
+                        type: object
+                        description: Project services and requirements
+                      industries:
+                        type: object
+                        description: Target industries for the project
+                      technologies:
+                        type: object
+                        description: Technologies required
+                      features:
+                        type: object
+                        description: Project features
+                      timeline:
+                        type: object
+                        description: Project timeline information
+                      selectedFreelancers:
+                        type: array
+                        description: List of freelancers already assigned to this project
+                        items:
+                          type: object
+                          properties:
+                            id:
+                              type: string
+                              format: uuid
+                            details:
+                              type: object
+                              properties:
+                                fullName:
+                                  type: string
+        "401":
+          description: Unauthorized - Invalid or missing token
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  success:
+                    type: boolean
+                    example: false
+                  message:
+                    type: string
+                    example: "Unauthorized - No user ID found"
+        "404":
+          description: Project not found or not available for bidding
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  success:
+                    type: boolean
+                    example: false
+                  message:
+                    type: string
+                    example: "Project not found or not available for bidding (payment not completed or not accepting bids)"
+        "500":
+          description: Internal server error
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  success:
+                    type: boolean
+                    example: false
+                  message:
+                    type: string
+                    example: "Failed to fetch project details"
+
   /freelancer/bids:
     post:
       tags:
