--- a/src/swagger/freelancer.yaml
+++ b/src/swagger/freelancer.yaml
@@ -2285,3 +2285,424 @@ paths:
                     example: false
                   message:
                     type: string
+
+  # ============================================
+  # FREELANCER SELECTED PROJECTS & MILESTONES
+  # ============================================
+
+  /freelancer/my-projects:
+    get:
+      tags:
+        - Freelancer - Selected Projects
+      summary: Get all projects where freelancer is selected/assigned
+      description: |
+        Retrieves all projects where the freelancer has been selected through bid approval.
+        These are the projects the freelancer is actively working on.
+
+        **Only shows projects where:**
+        - The freelancer's bid was accepted by admin
+        - The freelancer is in the project's selectedFreelancers list
+
+        **Response includes:**
+        - Project details (without client personal info or pricing)
+        - All milestones for each project (summary)
+        - Other selected freelancers on the project
+
+        **Requires:** FREELANCER role with valid authentication
+      security:
+        - bearerAuth: []
+      parameters:
+        - name: page
+          in: query
+          required: false
+          description: Page number for pagination
+          schema:
+            type: integer
+            default: 1
+            minimum: 1
+          example: 1
+        - name: limit
+          in: query
+          required: false
+          description: Number of items per page
+          schema:
+            type: integer
+            default: 10
+            minimum: 1
+            maximum: 100
+          example: 10
+      responses:
+        "200":
+          description: Successfully retrieved selected projects
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  success:
+                    type: boolean
+                    example: true
+                  data:
+                    type: object
+                    properties:
+                      projects:
+                        type: array
+                        items:
+                          type: object
+                          properties:
+                            id:
+                              type: string
+                              format: uuid
+                            createdAt:
+                              type: string
+                              format: date-time
+                            updatedAt:
+                              type: string
+                              format: date-time
+                            paymentStatus:
+                              type: string
+                              enum:
+                                [PENDING, SUCCEEDED, FAILED, CANCELED, REFUNDED]
+                            acceptingBids:
+                              type: boolean
+                            discordChatUrl:
+                              type: string
+                              nullable: true
+                            details:
+                              type: object
+                              properties:
+                                companyName:
+                                  type: string
+                                companyWebsite:
+                                  type: string
+                                  nullable: true
+                                businessAddress:
+                                  type: string
+                                  nullable: true
+                                businessType:
+                                  type: string
+                                referralSource:
+                                  type: string
+                            milestones:
+                              type: array
+                              items:
+                                type: object
+                                properties:
+                                  id:
+                                    type: string
+                                    format: uuid
+                                  milestoneName:
+                                    type: string
+                                  status:
+                                    type: string
+                                    enum:
+                                      [
+                                        PLANNED,
+                                        IN_PROGRESS,
+                                        BLOCKED,
+                                        COMPLETED,
+                                        CANCELLED,
+                                      ]
+                                  progress:
+                                    type: integer
+                                  deadline:
+                                    type: string
+                                    format: date-time
+                                  isMilestoneCompleted:
+                                    type: boolean
+                                  assignedFreelancerId:
+                                    type: string
+                                    nullable: true
+                      pagination:
+                        type: object
+                        properties:
+                          total:
+                            type: integer
+                          page:
+                            type: integer
+                          limit:
+                            type: integer
+                          totalPages:
+                            type: integer
+        "401":
+          description: Unauthorized - Invalid or missing token
+        "404":
+          description: Freelancer profile not found
+        "500":
+          description: Internal server error
+
+  /freelancer/my-projects/{projectId}:
+    get:
+      tags:
+        - Freelancer - Selected Projects
+      summary: Get detailed view of a selected project
+      description: |
+        Retrieves detailed information about a specific project the freelancer is working on.
+
+        **Includes:**
+        - Full project details (without pricing/estimates)
+        - All milestones with detailed information
+        - Other team members (selected freelancers)
+        - Services, technologies, features, timeline
+
+        **Authorization:**
+        - Only accessible if freelancer is in project's selectedFreelancers list
+
+        **Requires:** FREELANCER role with valid authentication
+      security:
+        - bearerAuth: []
+      parameters:
+        - name: projectId
+          in: path
+          required: true
+          description: UUID of the project
+          schema:
+            type: string
+            format: uuid
+          example: "123e4567-e89b-12d3-a456-426614174000"
+      responses:
+        "200":
+          description: Successfully retrieved project details
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  success:
+                    type: boolean
+                    example: true
+                  data:
+                    type: object
+                    description: Project details with milestones
+        "401":
+          description: Unauthorized - Invalid or missing token
+        "404":
+          description: Project not found or freelancer not assigned to this project
+        "500":
+          description: Internal server error
+
+  /freelancer/my-projects/{projectId}/milestones:
+    get:
+      tags:
+        - Freelancer - Selected Projects
+      summary: Get all milestones for a selected project
+      description: |
+        Retrieves all milestones for a project the freelancer is working on.
+
+        **Shows:**
+        - All milestones for the project (not just assigned to this freelancer)
+        - Milestone status, progress, deadlines
+        - Budget estimates and actual costs
+        - Assigned freelancer for each milestone
+        - Moderator approval status
+
+        **Sorted by:** Deadline (ascending)
+
+        **Authorization:**
+        - Only accessible if freelancer is in project's selectedFreelancers list
+
+        **Requires:** FREELANCER role with valid authentication
+      security:
+        - bearerAuth: []
+      parameters:
+        - name: projectId
+          in: path
+          required: true
+          description: UUID of the project
+          schema:
+            type: string
+            format: uuid
+          example: "123e4567-e89b-12d3-a456-426614174000"
+      responses:
+        "200":
+          description: Successfully retrieved milestones
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  success:
+                    type: boolean
+                    example: true
+                  data:
+                    type: array
+                    items:
+                      type: object
+                      properties:
+                        id:
+                          type: string
+                          format: uuid
+                        milestoneName:
+                          type: string
+                        description:
+                          type: string
+                          nullable: true
+                        status:
+                          type: string
+                          enum:
+                            [
+                              PLANNED,
+                              IN_PROGRESS,
+                              BLOCKED,
+                              COMPLETED,
+                              CANCELLED,
+                            ]
+                        progress:
+                          type: integer
+                          minimum: 0
+                          maximum: 100
+                        deadline:
+                          type: string
+                          format: date-time
+                        startedAt:
+                          type: string
+                          format: date-time
+                          nullable: true
+                        completedAt:
+                          type: string
+                          format: date-time
+                          nullable: true
+                        isMilestoneCompleted:
+                          type: boolean
+                        priority:
+                          type: string
+                          enum: [LOW, MEDIUM, HIGH, CRITICAL]
+                          nullable: true
+                        phase:
+                          type: string
+                          enum:
+                            [
+                              DISCOVERY,
+                              DESIGN,
+                              IMPLEMENTATION,
+                              TESTING,
+                              DEPLOYMENT,
+                            ]
+                          nullable: true
+                        riskLevel:
+                          type: string
+                          enum: [LOW, MEDIUM, HIGH]
+                          nullable: true
+                        blocked:
+                          type: boolean
+                        blockerReason:
+                          type: string
+                          nullable: true
+                        assignedFreelancerId:
+                          type: string
+                          nullable: true
+                        assignedFreelancer:
+                          type: object
+                          nullable: true
+                          properties:
+                            id:
+                              type: string
+                            details:
+                              type: object
+                              properties:
+                                fullName:
+                                  type: string
+                        estimatedHours:
+                          type: integer
+                          nullable: true
+                        actualHours:
+                          type: integer
+                          nullable: true
+                        budgetEstimate:
+                          type: number
+                          nullable: true
+                        actualCost:
+                          type: number
+                          nullable: true
+                        tags:
+                          type: array
+                          items:
+                            type: string
+                        deliverableUrl:
+                          type: string
+                          nullable: true
+                        notes:
+                          type: string
+                          nullable: true
+                        moderatorApprovalRequired:
+                          type: boolean
+                        moderatorApproved:
+                          type: boolean
+                        moderatorApprovedAt:
+                          type: string
+                          format: date-time
+                          nullable: true
+                        moderatorNotes:
+                          type: string
+                          nullable: true
+                        createdAt:
+                          type: string
+                          format: date-time
+                        updatedAt:
+                          type: string
+                          format: date-time
+        "401":
+          description: Unauthorized - Invalid or missing token
+        "404":
+          description: Project not found or freelancer not assigned to this project
+        "500":
+          description: Internal server error
+
+  /freelancer/my-projects/{projectId}/milestones/{milestoneId}:
+    get:
+      tags:
+        - Freelancer - Selected Projects
+      summary: Get specific milestone details
+      description: |
+        Retrieves detailed information about a specific milestone in a project the freelancer is working on.
+
+        **Shows:**
+        - Complete milestone information
+        - Assigned freelancer details
+        - Moderator approval information
+        - Budget and time tracking
+        - Project context (company name)
+
+        **Authorization:**
+        - Only accessible if freelancer is in project's selectedFreelancers list
+
+        **Requires:** FREELANCER role with valid authentication
+      security:
+        - bearerAuth: []
+      parameters:
+        - name: projectId
+          in: path
+          required: true
+          description: UUID of the project
+          schema:
+            type: string
+            format: uuid
+          example: "123e4567-e89b-12d3-a456-426614174000"
+        - name: milestoneId
+          in: path
+          required: true
+          description: UUID of the milestone
+          schema:
+            type: string
+            format: uuid
+          example: "987fcdeb-51a2-43d7-b789-012345678abc"
+      responses:
+        "200":
+          description: Successfully retrieved milestone details
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  success:
+                    type: boolean
+                    example: true
+                  data:
+                    type: object
+                    description: Detailed milestone information
+        "401":
+          description: Unauthorized - Invalid or missing token
+        "404":
+          description: Milestone not found or freelancer not assigned to the project
+        "500":
+          description: Internal server error
