--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,6 +35,7 @@ jobs:
 
             echo "Installing dependencies using Bun..."
             bun install
+            bun run db:migrate
             bun run build
             
             echo "Restarting PM2 service..."
